Added a link in a grid in the footer

--- a/index.html
+++ b/index.html
@@ -87,7 +87,12 @@
          </div>
         </div>
       </div>
-    <div><footer>Last updated:</footer></div>
+     <footer>
+      <div class="row">
+        <div class="col coded-by">Coded by <a href="https://github.com/acmunley01">Allison Fuhrman</a></div>
+        <div class="col last-updated">Last updated:</div>
+      </div>
+     </footer>
     </div>
     <script src="SRC/scriptsnew.js">
     </script>
