--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
      <footer>
       <div class="row">
-        <div class="col coded-by">Coded by <a href="https://github.com/acmunley01">Allison Fuhrman</a></div>
+        <div class="col coded-by">Coded by <a href="https://github.com/acmunley01" target="_blank">Allison Fuhrman</a></div>
         <div class="col last-updated">Last updated:</div>
       </div>
      </footer>
