Added relevant icon from API

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div><h1>Marietta</h1></div>
         <div class="row">
           <div class="col current-temp"><h2 id="current-temp">49°F</h2></div>
-          <div class="col current-status"><h2 id="current-status">🌞</h2></div>
+          <div class="col current-status"><h2 id="current-status"><img src="SRC/weather-icons/static/day.svg" alt="sunny animation" id = "condition-icon"/></h2></div>
         </div>
       <p class="current-details">
         <div class="row">
