--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://kit.fontawesome.com/41c976c382.js" crossorigin="anonymous"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,7 +27,7 @@
               <input class="form-control me-2" id="city-input" type="search" placeholder="Enter a new city" aria-label="Search" autocomplete="off">
               <button class="btn btn-outline-dark" type="submit">Search</button>
             </form>
-            <button class="btn btn-outline-dark" alt="Current Location" id="current-location">📍</button>
+            <button class="btn btn-outline-dark" alt="Current Location" id="current-location"><i class="fa-solid fa-location-crosshairs"></i></button>
         </div>
       </nav>
         <div><h1>Marietta</h1></div>
@@ -89,7 +90,7 @@
       </div>
      <footer>
       <div class="row">
-        <div class="col coded-by">Coded by <a href="https://github.com/acmunley01/SheCodes-weather-app" target="_blank">Allison Fuhrman</a></div>
+        <div class="col coded-by"><a href="https://github.com/acmunley01/SheCodes-weather-app" target="_blank">Open-source code</a> by Allison Fuhrman</div>
         <div class="col last-updated">Last updated:</div>
       </div>
      </footer>
