Added HTML to JS in a loop

--- a/index.html
+++ b/index.html
@@ -41,53 +41,7 @@
           <div class="col status-details"><ul><li><span id="description">Sunny</span></li><li>Humidity: <span id="humidity">10</span>%</li><li>Wind: <span id="wind">8</span> mph</li></ul></div>
         </div>
       </p>
-      <div class="row">
-        <div class="col">
-         <div class="card" style="width: 8rem;">
-            <div class="card-body tuesday-card">
-                <p class="card-text tuesday-name">Tuesday</p>
-                <h2 class="card-title tuesday-status">🌤</h2>
-                <p class="card-text tuesday-temp">52° | 28°</p>
-            </div>
-         </div>
-        </div>
-        <div class="col">
-         <div class="card" style="width: 8rem;">
-            <div class="card-body wednesday-card">
-                <p class="card-text wednesday-name">Wednesday</p>
-                <h2 class="card-title wednesday-status">🌤</h2>
-                <p class="card-text wednesday-temp">57° | 33°</p>
-            </div>
-         </div>
-        </div>
-        <div class="col">
-         <div class="card" style="width: 8rem;">
-            <div class="card-body thursday-card">
-                <p class="card-text thursday-name">Thursday</p>
-                <h2 class="card-title thursday-status">🌤</h2>
-                <p class="card-text thursday-temp">49° | 26°</p>
-            </div>
-         </div>
-        </div>
-        <div class="col">
-         <div class="card" style="width: 8rem;">
-            <div class="card-body friday-card">
-                <p class="card-text friday-name">Friday</p>
-                <h2 class="card-title friday-status">🌤</h2>
-                <p class="card-text friday-temp">43° | 21°</p>
-            </div>
-         </div>
-        </div>
-        <div class="col">
-         <div class="card" style="width: 8rem;">
-            <div class="card-body saturday-card">
-                <p class="card-text saturday-name">Saturday</p>
-                <h2 class="card-title saturday-status">🌤</h2>
-                <p class="card-text saturday-temp">50° | 30°</p>
-            </div>
-         </div>
-        </div>
-      </div>
+      <div id="forecast"></div>  
      <footer>
       <div class="row">
         <div class="col coded-by"><a href="https://github.com/acmunley01/SheCodes-weather-app" target="_blank">Open-source code</a> by Allison Fuhrman</div>
