--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="navbar-brand todayDate" id="today-date"></a>
             <form class="d-flex" id="change-city-form">
               <input class="form-control me-2" id="city-input" type="search" placeholder="Enter a new city" aria-label="Search" autocomplete="off">
-              <button class="btn btn-outline-dark" type="submit">Search</button>
+              <button class="btn btn-outline-dark" type="submit" id="search-button">Search</button>
             </form>
             <button class="btn btn-outline-dark" alt="Current Location" id="current-location"><i class="fa-solid fa-location-crosshairs"></i></button>
         </div>
